Removed dependencies to joda-time, commons-io and commons-lang3